fix changes to particles on IOS

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -17,17 +17,12 @@
   font-weight: bolder;
   letter-spacing: 1px;
   text-decoration: none;
-  &:active {
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-  }
 }
 .margin-top {
   margin-top: 4px;
 }
 .particles-wrapper {
   width: 100%;
-  height: 7em;
 }
 .banner {
   height: 87vh;
